# rag-from-scratch

./: docker-compose.yaml  pyproject.toml
decomposition/: settings.py
